<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LightSensor</string>
    <string name="sensor_light">Light by sensor:</string>
    <string name="camera_light">Light by camera: </string>
    <string name="magnitude_value" translatable="false">9.9x</string>
    <string name="camera_preview">camera preview</string>
    <string name="license_text">Licensed as GPL2. Application can be used for any purpose as you wish.</string>
    <string name="used_front_camera">Used front camera sensor.</string>
    <string name="used_back_camera">Used back camera sensor.</string>
    <string name="used_light_sensor">Used light sensor.</string>
    <string name="sensor_not_exist">no sensors</string>
    <string name="have_used_for">Have used for</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="auto_fix">Update on unlock by day time</string>
    <string name="auto_sun_fix">Use sunrise/sunset time on unlock</string>
    <string name="percent_value" translatable="false">0%</string>
    <string name="minPercentTitle">Minimum brightness value</string>
    <string name="settings">Settings</string>
    <string name="use_back_camera">Use back camera.</string>
    <string name="disable_change_brightness">Disable change brightness.</string>
    <string name="dont_use_camera">Do not use camera.</string>
    <string name="source_code">Source Code</string>
    <string name="LatString">Latitude: %f</string>
    <string name="LongString">Longitude: %f</string>
    <string name="AltString">Altitude: %f</string>
    <string name="sun_never_rises">The sun never rises on this location (on the specified date)</string>
    <string name="sun_never_sets">The sun never sets on this location (on the specified date).</string>
    <string name="sunrise_time">Sunrise: %1$d:%2$02d</string>
    <string name="sunset_time">Sunset: %1$d:%2$02d</string>
    <string name="use_foot_candle">Show foot candle value.</string>
    <string name="use_mono_preview">Show mono image in preview.</string>
    <string name="used_lux">Used values in lux(0.0929 foot candle).</string>
    <string name="used_foot_candle">Show foot candle values.</string>
    <string name="maxPercentTitle">Maximum brightness value.</string>
    <string name="magnitudeSensorTitle">Magnitude value for hardware lightsensor.</string>
    <string name="maxBatteryPercentTitle">Maximum brightness value on low battery.</string>
    <string name="low_battery">Low battery level:</string>
    <string name="updateFrequencyTitle">Brightness update frequency</string>
    <string name="update_in_second" translatable="false">%.2f</string>
    <string name="low_power_enabled">Low Power Enabled</string>
    <string name="preview_active_seconds">Preview will be stopped in</string>
    <string name="preview_stopped_some_time">Preview is stopped, click on preview for resume.</string>
    <string name="previewTimeTitle">Preview timeout</string>
    <string name="preview_second">60</string>
    <string name="cameraExposureTitle">Camera Exposure</string>
    <string name="exposure_value">+1</string>
    <string name="timerPeriodTitle">Update period by time of day</string>
    <string name="timer_period">15</string>
</resources>
